[gd_scene load_steps=6 format=3 uid="uid://b3jycsrfrj4a"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_becnh"]

[sub_resource type="Animation" id="Animation_ugmi7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.982514, 0.97981, 1)]
}

[sub_resource type="Animation" id="Animation_qgimf"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.027451, 0.0862745, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nhwwe"]
_data = {
"RESET": SubResource("Animation_ugmi7"),
"hit": SubResource("Animation_qgimf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_adw5n"]
radius = 96.0

[node name="Enemy_Template" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_becnh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 0.982514, 0.97981, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_nhwwe")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_adw5n")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Dash_Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="HitBoxArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Invincibility_Timer" type="Timer" parent="HitBoxArea"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Dash_Timer" to="." method="_on_dash_timer_timeout"]
[connection signal="body_entered" from="HitBoxArea" to="." method="_on_hit_box_area_body_entered"]
[connection signal="timeout" from="HitBoxArea/Invincibility_Timer" to="." method="_on_invincibility_timer_timeout"]
